--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ email: alex@alexbevi.com
 # ----------------------- #
 
 # If publishing to a subdirectory as in http://site.com/project set 'root: /project'
-root: /
+root: /blog
 permalink: /blog/:year/:month/:day/:title/
 source: source
 destination: public
