--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,9 @@ author: Alex Bevilacqua
 simple_search: https://www.google.com/search
 description:
 
+gems:
+  - jekyll-gist
+
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
 # http://www.ruby-doc.org/core-1.9.2/Time.html#method-i-strftime
