--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ theme: jekyll-theme-chirpy
 
 # Only if your site type is GitHub Project sites and doesn't have a custom domain,
 # change below value to '/projectname'.
-baseurl: ''
+baseurl: '/blog'
 
 # the HTML language tag › https://www.w3.org/International/questions/qa-choosing-language-tags
 lang: en-US
@@ -82,7 +82,7 @@ img_cdn: ''
 # the avatar on sidebar, support local or CORS resources
 avatar: ./images/avatar.png
 
-# boolean type, the global switch for ToC in posts.
+# boolean type, the global switch for ToC in posts.       
 toc: true
 
 disqus:
@@ -90,9 +90,12 @@ disqus:
   shortname: 'alexbevi'    # Fill with your Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
 
 paginate: 10          # Posts per page on the blog index
-paginate_path: "posts/:num"  # Directory base for pagination URLs eg. /posts/2/
+# paginate_path: "posts/:num"  # Directory base for pagination URLs eg. /posts/2/
 
 # ------------ The following options are not recommended to be modified ------------------
+
+gist:
+  noscript: false
 
 kramdown:
   syntax_highlighter: rouge
@@ -108,7 +111,7 @@ kramdown:
 # DO NOT change this unless you're a Pro user on Jekyll and Web development,
 # Or you think you're smart enough to change other relevant URLs within this template.
 # permalink: /posts/:title/
-permalink: /blog/:year/:month/:day/:title/
+permalink: /:year/:month/:day/:title/
 
 picture:
   suppress_warnings: true
