--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,8 @@ title: ALEX BEVILACQUA                          # the main title
 tagline: my little corner of the interwebs   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  A minimal, portfolio, sidebar,
-  bootstrap Jekyll theme with responsive web design
-  and focuses on text presentation.
+  Programming, MongoDB, Ruby and anything else I find interesting. Sometimes dabble in
+  RPG/JRPG/Adventure game reviews.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: 'https://www.alexbevi.com'
@@ -113,9 +112,6 @@ kramdown:
 # Or you think you're smart enough to change other relevant URLs within this template.
 # permalink: /posts/:title/
 permalink: /:year/:month/:day/:title/
-
-picture:
-  suppress_warnings: true
 
 collections:
   tabs:
