--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -23,7 +23,7 @@ jobs:
       - name: 💎 setup ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 2.7 # can change this to 2.7 or whatever version you prefer
+          ruby-version: 3.1 # can change this to 2.7 or whatever version you prefer
 
       - name: 🔨 install dependencies & build site
         uses: limjh16/jekyll-action-ts@v2
@@ -31,10 +31,10 @@ jobs:
           enable_cache: true
           ### Enables caching. Similar to https://github.com/actions/cache.
           #
-          format_output: true
+          # format_output: true
           ### Uses prettier https://prettier.io to format jekyll output HTML.
           #
-          prettier_opts: '{ "useTabs": true }'
+          # prettier_opts: '{ "useTabs": true }'
           ### Sets prettier options (in JSON) to format output HTML. For example, output tabs over spaces.
           ### Possible options are outlined in https://prettier.io/docs/en/options.html
           #
