Revert "update favicon path"
This reverts commit 629594baa753af454097b1ad25f36cfdebba5dcf.

--- a/_config.yml
+++ b/_config.yml
@@ -144,7 +144,7 @@ defaults:
       layout: page
       permalink: /:title/
   - scope:
-      path: assets/favicons
+      path: assets/img/favicons
     values:
       swcache: true
   - scope:
