--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -1,72 +1,63 @@
-name: Build and deploy jekyll site
-
+name: "Build and Deploy"
 on:
   push:
     branches:
       - main
-      # - source
-      # It is highly recommended that you only run this action on push to a
-      # specific branch, eg. master or source (if on *.github.io repo)
+      # - master
+    paths-ignore:
+      - .gitignore
+      - README.md
+      - LICENSE
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+# Allow one concurrent deployment
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
 
 jobs:
-  jekyll:
-    runs-on: ubuntu-latest # can change this to ubuntu-latest if you prefer
-    steps:
-      - name: 📂 setup
-        uses: actions/checkout@v2
+  build:
+    runs-on: ubuntu-latest
 
-        # include the lines below if you are using jekyll-last-modified-at
-        # or if you would otherwise need to fetch the full commit history
-        # however this may be very slow for large repositories!
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
         with:
-          fetch-depth: '0'
-          submodules: true
-      - name: 💎 setup ruby
+          fetch-depth: 0
+          # submodules: true
+          # If using the 'assets' git submodule from Chirpy Starter, uncomment above
+          # (See: https://github.com/cotes2020/chirpy-starter/tree/main/assets)
+
+      - name: Setup Pages
+        id: pages
+        uses: actions/configure-pages@v4
+
+      - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 3.2 # can change this to 2.7 or whatever version you prefer
+          ruby-version: 3.3
+          bundler-cache: true
 
-      - name: 🔨 install dependencies & build site
-        uses: limjh16/jekyll-action-ts@v2
-        with:
-          enable_cache: true
-          ### Enables caching. Similar to https://github.com/actions/cache.
-          #
-          # format_output: true
-          ### Uses prettier https://prettier.io to format jekyll output HTML.
-          #
-          # prettier_opts: '{ "useTabs": true }'
-          ### Sets prettier options (in JSON) to format output HTML. For example, output tabs over spaces.
-          ### Possible options are outlined in https://prettier.io/docs/en/options.html
-          #
-          # prettier_ignore: 'about/*'
-          ### Ignore paths for prettier to not format those html files.
-          ### Useful if the file is exceptionally large, so formatting it takes a while.
-          ### Also useful if HTML compression is enabled for that file / formatting messes it up.
-          #
-          # jekyll_src: sample_site
-          ### If the jekyll website source is not in root, specify the directory. (in this case, sample_site)
-          ### By default, this is not required as the action searches for a _config.yml automatically.
-          #
-          # gem_src: sample_site
-          ### By default, this is not required as the action searches for a _config.yml automatically.
-          ### However, if there are multiple Gemfiles, the action may not be able to determine which to use.
-          ### In that case, specify the directory. (in this case, sample_site)
-          ###
-          ### If jekyll_src is set, the action would automatically choose the Gemfile in jekyll_src.
-          ### In that case this input may not be needed as well.
-          #
-          # key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
-          # restore-keys: ${{ runner.os }}-gems-
-          ### In cases where you want to specify the cache key, enable the above 2 inputs
-          ### Follows the format here https://github.com/actions/cache
-          #
-          # custom_opts: '--drafts --future'
-          ### If you need to specify any Jekyll build options, enable the above input
-          ### Flags accepted can be found here https://jekyllrb.com/docs/configuration/options/#build-command-options
+      - name: Build site
+        run: bundle exec jekyll b -d "_site${{ steps.pages.outputs.base_path }}"
+        env:
+          JEKYLL_ENV: "production"
 
-      - name: 🚀 deploy
-        uses: peaceiris/actions-gh-pages@v3
+      # - name: Test site
+      #   run: |
+      #     bundle exec htmlproofer _site \
+      #       \-\-disable-external \
+      #       \-\-ignore-urls "/^http:\/\/127.0.0.1/,/^http:\/\/0.0.0.0/,/^http:\/\/localhost/"
+
+      - name: deploy
+        uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./_site
