--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -13,3 +13,7 @@ dmitry:
 neal:
   name: Neal Beeken
   url: https://nbbeeken.github.io
+
+adviti:
+  name: Adviti Mishra
+  url: https://www.linkedin.com/in/advitimishra/
