--- a/_config.yml
+++ b/_config.yml
@@ -48,8 +48,22 @@ google_site_verification: google_meta_tag_verification # fill in to your verific
 # ↑ --------------------------
 # The end of `jekyll-seo-tag` settings
 
-google_analytics:
-  id: UA-36490021-1 # fill in your Google Analytics ID
+# Web Analytics Settings
+analytics:
+  google:
+    id: UA-36490021-1 # fill in your Google Analytics ID
+  # goatcounter:
+  #   id: # fill in your GoatCounter ID
+  # umami:
+  #   id: # fill in your Umami ID
+  #   domain: # fill in your Umami domain
+  # matomo:
+  #   id: # fill in your Matomo ID
+  #   domain: # fill in your Matomo domain
+  # cloudflare:
+  #   id: # fill in your Cloudflare Web Analytics token
+  # fathom:
+  #   id: # fill in your Fathom Site ID
 
 # Prefer color scheme setting.
 #
@@ -78,12 +92,11 @@ avatar: ./images/avatar.png
 toc: true
 
 comments:
-  active: 'disqus' # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
-  # The active options are as follows:
+  # Global switch for the post-comment system. Keeping it empty means disabled.
+  provider: 'disqus' # [disqus | utterances | giscus]
+  # The provider options are as follows:
   disqus:
-    comments: true  # boolean type, the global switch for posts comments.
-    shortname: 'alexbevi'    # Fill with your Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
-
+    shortname: 'alexbevi' # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
 
 
 # Self-hosted static assets, optional › https://github.com/cotes2020/chirpy-static-assets
@@ -97,11 +110,12 @@ assets:
 pwa:
   enabled: true # the option for PWA feature
 
-paginate: 20
+paginate: 25
 
 # ------------ The following options are not recommended to be modified ------------------
 
 kramdown:
+  footnote_backlink: "&#8617;&#xfe0e;"
   syntax_highlighter: rouge
   syntax_highlighter_opts: # Rouge Options › https://github.com/jneen/rouge#full-options
     css_class: highlight
