--- a/_data/share.yml
+++ b/_data/share.yml
@@ -23,3 +23,15 @@ platforms:
   - type: Weibo
     icon: "fab fa-weibo"
     link: "http://service.weibo.com/share/share.php?title=TITLE&url=URL"
+
+  - type: Bluesky
+    icon: "fa-brands fa-bluesky"
+    link: "https://bsky.app/intent/compose?text=TITLE%20URL"
+
+  - type: Reddit
+    icon: "fa-brands fa-square-reddit"
+    link: "https://www.reddit.com/submit?url=URL&title=TITLE"
+
+  - type: Threads
+    icon: "fa-brands fa-square-threads"
+    link: "https://www.threads.net/intent/post?text=TITLE%20URL"
