--- a/assets/lib/package.json
+++ b/assets/lib/package.json
@@ -1,14 +1,12 @@
 {
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.5.1",
-    "bootstrap": "^5.3.2",
+    "@fortawesome/fontawesome-free": "^6.7.1",
     "clipboard": "^2.0.11",
-    "dayjs": "^1.11.10",
-    "jquery": "^3.7.1",
+    "dayjs": "^1.11.13",
+    "glightbox": "^3.3.0",
     "lazysizes": "^5.3.2",
-    "magnific-popup": "^1.1.0",
-    "mermaid": "^10.6.1",
+    "mermaid": "^11.4.0",
     "simple-jekyll-search": "^1.10.0",
-    "tocbot": "^4.25.0"
+    "tocbot": "^4.32.2"
   }
 }
