--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,7 @@ series_nav:
   battle_music_breakdown:
     title: "Turn-based JRPG Battle Music Breakdown"
     title_link: "{% post_url 2025-10-11-turn-based-jrpg-battle-music-breakdown %}"
-    description: "This review is part of the Battle Music Breakdown series."
+    description: "This review is part of the Battle Music Breakdown series. See all games sorted by score <a href='{% post_url 2025-10-15-turn-based-jrgp-battle-music-breakdown-sorted-by-score %}'>here</a>.""
 
 # Web Analytics Settings
 analytics:
